--- a/src/app.css
+++ b/src/app.css
@@ -8,8 +8,9 @@ body {
   font-family: 'Inter', sans-serif;
   font-weight: 400;
   overflow-x: hidden;
+  padding: 0 auto;
 }
 
 h1 {
-  font-family: 'Nunito'
+  font-family: 'Inter'
 }
